--- a/StreetSmart/StreetSmart/Info.plist
+++ b/StreetSmart/StreetSmart/Info.plist
@@ -2,16 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSLocationUsageDescription</key>
-	<string>Let it go</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Let it go</string>
-	<key>NSLocationWhenInUsageDescription</key>
-	<string>Can&apos;t hold me back anymore</string>
-	<key>UIBackgroundModes</key>
-	<array>
-		<string>location</string>
-	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -32,6 +22,16 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Let it go</string>
+	<key>NSLocationUsageDescription</key>
+	<string>LET IT GO LET IT GO CAN&apos;T HOLD ME BACK ANYMORE</string>
+	<key>NSLocationWhenInUsageDescription</key>
+	<string>Can&apos;t hold me back anymore</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
